--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcryptjs": "2.4.3",
     "jsonwebtoken": "9.0.2",
     "mongodb": "6.7.0",
+    "mongoose": "7.6.3",
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
