--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "bcryptjs": "2.4.3",
-    "jsonwebtoken": "9.0.2",
-    "mongodb": "6.7.0",
-    "mongoose": "7.6.3",
+    "@supabase/supabase-js": "^2.38.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
 }
+
